# mutable

./: .gitignore  CMakeLists.txt  PROJECT_REPORT_MUTABLE.md  README.md  TwoPhaseOptimizer Implemented.md  TwoPhaseOptimizer_Code_Footprint.md  TwoPhaseOptimizer_Implementation_Plan_InDepth.md  benchmark.pgsql  benchmark_results.csv  demo_twophase.sql  job_benchmark_final.csv  job_benchmark_results.csv  job_results.csv  job_twophase_benchmark.csv
benchmark/: Benchmark.py
benchmark/2PO_Optimizer/: benchmark_2po.py  complex_star.sql  complex_star_15.sql
benchmark/job/: README.md  benchmark_execution_job.py  benchmark_job_full.py  benchmark_total_time.py  benchmark_twophase_job.py  generate_execution_report.py  generate_job_report.py  generate_twophase_report.py  run_job_twophase.py
benchmark/plan-enumerators/cardinality-agnostic/: chain.yml  clique.yml  cycle.yml  star.yml
benchmark_results/: plot_benchmark_results.py
benchmark_results/plan-enumerator benchmark results/: plan_enumerator_results 2.csv  plot_benchmark_results.py
benchmark_results/plan-enumerator benchmark results I/: benchmark_summary.csv  query_size_breakdown.md
benchmark_results/plan-enumerator benchmark results II/: plan_enumerator_results.csv
include/mutable/IR/: TwoPhaseOptimizer.hpp
results/: walkthrough_benchmark.md
src/: CMakeLists.txt
src/IR/: CMakeLists.txt  PlanEnumerator.cpp  TwoPhaseOptimizer.cpp
src/backend/: CMakeLists.txt  Interpreter.hpp
src/util/: Spn.cpp
unittest/: CMakeLists.txt
unittest/IR/: TwoPhaseOptimizerTest.cpp
